--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ commands:
   rpgitems:
     description: RPG Itemsについてのコマンドを実行できます。
     usage: |
-        /rpgitems give <player> <itemId> プレイヤーにアイテムを与えます。
-        /rpgitems descript <itemId> アイテムの説明を表示します。
-        /rpgitems reload アイテムの設定をリロードします。
+        /<command> give <player> <itemId> プレイヤーにアイテムを与えます。
+        /<command> descript <itemId> アイテムの説明を表示します。
+        /<command> reload アイテムの設定をリロードします。
+    permission: op
